# TinyWebServer

./: CMakeLists.txt  FileHandler.cpp  LambdaDemo.cpp  Makefile  TinyWebServer.code-workspace  lambda.cpp  main.cpp  smart_ptr.cpp
include/: Socket.hpp  http_request.hpp
src/: Socket.cpp  Thread_epoll.cpp  epoll_server.cpp  http_parser.cpp  main.cpp  multi_thread_server.cpp  socket_server.cpp  tcp_server.cpp  thread_pool.hpp
